core proto breakdown into individual service
